Got the memory viewer / editor working

--- a/Views/MemoryViewer.axaml
+++ b/Views/MemoryViewer.axaml
@@ -17,6 +17,8 @@
                 <Border BorderThickness="0,0,0,1" BorderBrush="#5AFFFFFF"/>
                 
                 <Canvas>
+                        <!-- Memory Input Block -->
+                        
                         <TextBox
                                 Name="MemoryInput"
                                 CornerRadius="0"
@@ -28,9 +30,75 @@
                                 KeyDown="OnKeyDown"
                                 IsReadOnly="true">
                                 
-                                Test?
+                                Default
                                 
                         </TextBox>
+                        
+                        <!-- Block Selection -->
+                        
+                        <TextBlock
+                                Canvas.Top="370"
+                                Canvas.Left="15"
+                                FontFamily="Consolas"
+                                FontSize="15">
+                                Block:        
+                        </TextBlock>
+                        
+                        <TextBox
+                                Name="BlockInput"
+                                CornerRadius="0"
+                                Canvas.Top = "360"
+                                Canvas.Left="80"
+                                Width="70"
+                                Height="40"
+                                FontFamily="Consolas"
+                                FontSize="18"
+                                MaxLength="2"
+                                Padding="6"
+                                TextAlignment="Center">
+                                0
+                        </TextBox>
+                        
+                        <!-- Page Selection -->
+                        
+                        <TextBlock
+                                Canvas.Top="370"
+                                Canvas.Left="170"
+                                FontFamily="Consolas"
+                                FontSize="15">
+                                Page:        
+                        </TextBlock>
+                        
+                        <TextBox
+                                Name="PageInput"
+                                CornerRadius="0"
+                                Canvas.Top = "360"
+                                Canvas.Left="230"
+                                Width="70"
+                                Height="40"
+                                FontFamily="Consolas"
+                                FontSize="18"
+                                MaxLength="2"
+                                Padding="6"
+                                TextAlignment="Center">
+                                0
+                        </TextBox>
+                        
+                        <Button
+                                Click="OnReAddress"
+                                Canvas.Top = "360"
+                                Canvas.Left="530"
+                                Width="70"
+                                Height="40"
+                                BorderThickness="1"
+                                BorderBrush="Black"
+                                CornerRadius="3"
+                                HorizontalContentAlignment="Center"
+                                VerticalContentAlignment="Center"
+                                FontFamily="Consolas"
+                                FontSize="18">
+                                Go
+                        </Button>
                 </Canvas>
         </Grid>
         
